Fixed weird wrapping.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@1192 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: 84b28c3b76ebef07f4f68f18683f57706ceb8e3d

--- a/tv/resources/css/external.css
+++ b/tv/resources/css/external.css
@@ -8,11 +8,11 @@ body {
 
 #external-container-basic {
 	position: absolute;
-	width: 450px;
+	width: 500px;
 	height: 150px;
 	left: 50%;
 	top: 50%;
-	margin: -125px 0px 0px -225px;
+	margin: -125px 0px 0px -250px;
 	text-align: center;
 }
 
